[package]
name = "advent_of_code_2024_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.16.1", features = ["rayon"] }
nom = "7.1.3"
rayon = "1.10.0"
paste = "1.0.15"
itertools = "0.13.0"
cached = "0.54.0"
regex = "1.11.1"
petgraph = "0.6.5"
